# free-algebra

./: Cargo.toml  README.md
src/: lib.rs  module.rs  monoid.rs  specifics.rs
src/specifics/: free_group.rs  free_monoid.rs  free_pow.rs  mod.rs
