[package]
authors = ["Joshua Smith <jsmith62831@gmail.com>"]
name = "free-algebra"
description = "Types for constructing free algebras over sets."
version = "0.1.0"
edition = "2018"
keywords = ["mathematics", "algebra", "polynomials"]
categories = ["algorithms", "science", "data-structures"]
repository = "https://github.com/jsmith628/free-algebra"
documentation = "https://docs.rs/free-algebra"
license = "MIT"
readme = "README.md"

[dependencies]
derivative = "1.0"
num-traits = "0.2"
maths-traits = "0.2"
